# OBC-ControllerPanel

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/basicPanel/: BasicControlPanel.cpp  BasicControlPanel.hpp  CMakeLists.txt  MockDevice.cpp  MockDevice.hpp  main.cpp
examples/uvc/: CMakeLists.txt  main.cpp
examples/xterm/: CMakeLists.txt  XtermSettingsWidget.cpp  XtermSettingsWidget.hpp  main.cpp
examples/xtherm/: XthermSettingsWidget.cpp  XthermSettingsWidget.hpp  main.cpp
src/base/: ControlInterface.hpp  MockerInterface.hpp
src/component/: ButtonComponent.cpp  ButtonComponent.h  ButtonComponent.hpp  KeepButton.cpp  KeepButton.h  MultiSelectComponent.cpp  MultiSelectComponent.h  MultiSelectComponent.hpp  NumberSettingComponent.cpp  NumberSettingComponent.h  NumberSettingComponent.hpp  SettingComponentAbs.cpp  SettingComponentAbs.h  SettingComponentAbs.hpp  SwitchSettingComponent.cpp  SwitchSettingComponent.h  SwitchSettingComponent.hpp
src/panel/: ControlPanelInterface.hpp  PanelInterface.hpp  UVCControllPanel.cpp  UVCControllPanel.hpp
